[build-system]
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "atlas-framework"
version = "0.1.5"
authors = [
  { name="Grant Viklund", email="renderbox@gmail.com" },
]
description = "Class-based famework for quickly creating robust Python apps."
readme = "README.md"
requires-python = ">=3.7,<3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["cli", "app", "application", "framework"]
dependencies = []


[project.optional-dependencies]
dev = [
    "ipython",
    "black",
    "flake8",
    "flake8-black",
    "flake8-pyproject",
    "mypy",
    "bandit",
    "isort",
    "toml",
]
test = [
    "coverage",
    "pytest"
]
docs = [
    "coverage",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
pyside2 = [
    "PySide2",
]

[project.urls]
"Homepage" = "https://github.com/renderbox/atlas-framework"
"Bug Tracker" = "https://github.com/renderbox/atlas-framework/issues"

# [tool.black]

[tool.flake8]
ignore = ['E231', 'E241']
max-line-length = 120

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
